# py-telegram-logger

./: pyproject.toml  readme.md  speed_test.py  test.py  test2.py
pytelegram_logger/: __init__.py
