[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-telegram-logger"
version = "0.1.0"
authors = [
    {name = "Beltrán Offerrall"}
]
description = "Minimal Python logger with Telegram notifications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/offerrall/py-telegram-logger"
Repository = "https://github.com/offerrall/py-telegram-logger"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytelegram_logger*"]